@@ -1,6 +1,8 @@
 freebsd-buildutils (10.0~svn259404-4) UNRELEASED; urgency=low
 
   * Correctly setup BSD version of MAKEFLAGS to support parallel builds.
+  * Install make and mtree by their upstream names (fmake and fmtree).
+    Remove the legacy symlinks (leave them to freebsd-glue).
 
  -- Robert Millan <rmh@debian.org>  Sun, 29 Dec 2013 20:38:18 +0100
 
